Fix font in dark mode

--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -17,7 +17,7 @@
 
 .dark {
 	--color-primary--dark: #{$primary--dark};
-	--color-primary: #{$primary--dark};
+	--color-primary: #{$primary};
 	--color-primary--light: #{$primary--light};
 
 	--color-secondary--blue: #{$secondary-blue--dark};
